--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,101 @@
-font-family: 'Roboto',
-sans-serif;
+:root {
+    --main-font: font-family: 'Roboto',
+        sans-serif;
+    --second-font: font-family: 'Montserrat',
+        sans-serif;
+    --main-color: #95e1d3;
+    --second-color: #f38181;
+    --third-color: #fce38a;
+    --font-color: #333333;
+    --second-font-color: #999999;
+}
 
-font-family: 'Montserrat',
-sans-serif;
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+ul,
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+logo {
+    font-family: var(--second-font);
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 36px;
+    color: var(--main-color);
+}
+
+.nav-menu {
+    display: flex;
+    color: var(--main-color);
+    font-family: var(--second-font);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+}
+
+.nav-menu li {
+    position: relative;
+}
+
+
+.nav-menu a {
+    color: var(--main-color);
+}
+
+.nav-menu li:nth-child(1) a {
+    color: #fce38a;
+}
+
+.nav-menu li:not(:last-child) {
+    margin-right: 56px;
+}
+
+.nav-menu li:hover a {
+    color: var(--second-color);
+}
+
+.nav-menu a::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: var(--second-color);
+    position: absolute;
+    bottom: -10px;
+    visibility: hidden;
+
+}
+
+.nav-menu li:hover a::after {
+    visibility: visible;
+
+}
