--- a/styles/style.css
+++ b/styles/style.css
@@ -1,159 +1,270 @@
 :root {
-  --main-font: "Roboto", sans-serif;
-  --second-font: "Montserrat", sans-serif;
-  --main-color: #95e1d3;
-  --second-color: #f38181;
-  --third-color: #fce38a;
-  --font-color: #333333;
-  --second-font-color: #999999;
+    --main-font: "Roboto", sans-serif;
+    --second-font: "Montserrat", sans-serif;
+    --main-color: #95e1d3;
+    --second-color: #f38181;
+    --third-color: #fce38a;
+    --font-color: #333333;
+    --second-font-color: #999999;
 }
 
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 ul,
 li {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .container {
-  width: 1200px;
-  margin: 0 auto;
+    width: 1200px;
+    margin: 0 auto;
 }
 
 nav {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 logo {
-  font-family: var(--second-font);
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 36px;
-  color: var(--main-color);
+    font-family: var(--second-font);
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 36px;
+    color: var(--main-color);
 }
 
 .nav-menu {
-  display: flex;
-  color: var(--main-color);
-  font-family: var(--second-font);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 16px;
-  text-transform: uppercase;
+    display: flex;
+    color: var(--main-color);
+    font-family: var(--second-font);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    text-transform: uppercase;
 }
 
 .nav-menu li {
-  position: relative;
+    position: relative;
 }
 
 .nav-menu a {
-  color: var(--main-color);
+    color: var(--main-color);
 }
 
 .nav-menu li:nth-child(1) a {
-  color: #fce38a;
+    color: #fce38a;
 }
 
 .nav-menu li:not(:last-child) {
-  margin-right: 56px;
+    margin-right: 56px;
 }
 
 .nav-menu li:hover a {
-  color: var(--second-color);
+    color: var(--second-color);
 }
 
 .nav-menu a::after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background: var(--second-color);
-  position: absolute;
-  bottom: -10px;
-  visibility: hidden;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: var(--second-color);
+    position: absolute;
+    bottom: -10px;
+    visibility: hidden;
 }
 
 .nav-menu li:hover a::after {
-  visibility: visible;
+    visibility: visible;
+}
+
+header {
+    padding-bottom: 122px;
 }
 
 main {
-  text-align: center;
+    text-align: center;
 }
 
 .services-title span {
-  font-family: "Kaushan Script", cursive;
-  font-size: 24px;
-  line-height: 28px;
-  display: block;
+    font-family: "Kaushan Script", cursive;
+    font-size: 24px;
+    line-height: 28px;
+    display: block;
+    margin-bottom: 20px;
 }
 
 .services-title {
-  font-family: var(--second-font);
-  font-size: 30px;
-  line-height: 36px;
-  text-transform: uppercase;
-  color: var(--font-color);
+    font-family: var(--second-font);
+    font-size: 30px;
+    line-height: 36px;
+    text-transform: uppercase;
+    color: var(--font-color);
+    margin: 0;
 }
 
 h2.services-title::after {
-  content: "";
-  display: table;
-  width: 60px;
-  height: 4px;
-  background: var(--second-color);
-  margin: 40px auto 0;
+    content: "";
+    display: table;
+    width: 60px;
+    height: 4px;
+    background: var(--second-color);
+    margin: 40px auto 66px;
 }
 
 .services-list {
-  display: flex;
-  flex-wrap: wrap;
-  }
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    justify-content: space-around;
+}
 
-  .services-list li {
+li.services-list-item {
     width: 380px;
     text-align: left;
     flex-wrap: wrap;
-    justify-content: space-around;
-  }
+    margin: 0;
+    padding: 0;
+    position: relative;
 }
 
-
 .services-list-item h3 {
-  font-family: var(--second-font);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 16px;
-  color: var(--font-color);
+    font-family: var(--second-font);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    color: var(--font-color);
+    text-transform: uppercase;
+    padding-bottom: 14px;
+    margin: 0;
 }
 
 .services-list-item p {
-  font-family: var(--main-font);
-  font-size: 15px;
-  font-weight: 400;
-  line-height: 24px;
-  color: var(--second-font-color);
+    font-family: var(--main-font);
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    color: var(--second-font-color);
+    margin: 0;
 }
 
-.services-list-item {
-  padding-left: 90px;
+.service-description {
+    padding-left: 90px;
+}
+
+.icon {
+    display: block;
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    top: 2px;
+    left: 24px;
+    /* background-position: center; */
+}
+
+.icon-01 {
+    background-image: url("../images/icon-01.png");
+}
+
+.icon-02 {
+    background-image: url("../images/icon-02.png");
+}
+
+.icon-03 {
+    background-image: url("../images/icon-03.png");
+}
+
+.icon-04 {
+    background-image: url("../images/icon-04.png");
+}
+
+.icon-05 {
+    background-image: url("../images/icon-05.png");
+}
+
+.icon-06 {
+    background-image: url("../images/icon-06.png");
+}
+
+.services-list-item:not(:nth-last-child(-n+3)) {
+    margin-bottom: 100px;
+}
+
+.services {
+    padding-bottom: 100px;
+}
+
+.team-title span {
+    font-family: "Kaushan Script", cursive;
+    font-size: 24px;
+    line-height: 28px;
+    display: block;
+    margin-bottom: 20px;
+}
+
+.team-title {
+    font-family: var(--second-font);
+    font-size: 30px;
+    line-height: 36px;
+    text-transform: uppercase;
+    color: var(--font-color);
+    margin: 0;
+}
+
+h2.team-title::after {
+    content: "";
+    display: table;
+    width: 60px;
+    height: 4px;
+    background: var(--second-color);
+    margin: 40px auto 66px;
+}
+
+p.team-title-description {
+    font-family: var(--main-font);
+    color: var(--second-font-color);
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    margin-bottom: 92px;
+}
+
+.team-list {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+}
+
+.overlay {
+    background-image: linear-gradient(90deg, rgba(252, 227, 138, 0.9), rgba(243, 129, 129, 0.9));
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+}
+
+.team-overlay {
+    position: relative;
 }
