--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,11 @@
 :root {
     --main-font: "Roboto", sans-serif;
     --second-font: "Montserrat", sans-serif;
-    --main-color: #95e1d3;
-    --second-color: #f38181;
-    --third-color: #fce38a;
-    --font-color: #333333;
-    --second-font-color: #999999;
+    --main-color: rgb(149, 225, 211);
+    --second-color: rgb(243, 129, 129);
+    --third-color: rgb(252, 227, 138);
+    --font-color: rgb(51, 51, 51);
+    --second-font-color: rgb(153, 153, 153);
 }
 
 html {
@@ -61,6 +61,8 @@ logo {
     font-weight: 400;
     line-height: 16px;
     text-transform: uppercase;
+    margin: 0;
+    align-items: center;
 }
 
 .nav-menu li {
@@ -99,11 +101,13 @@ logo {
 }
 
 header {
-    padding-bottom: 122px;
+
+    padding: 34px 0 122px;
 }
 
 main {
     text-align: center;
+    padding-bottom: 82px;
 }
 
 .services-title span {
@@ -262,9 +266,147 @@ p.team-title-description {
     height: 100%;
     width: 100%;
     position: absolute;
-    top: 0;
+    left: -10px;
+    top: -10px;
+    box-shadow: 10px 10px 0 rgb(149, 225, 211);
+    opacity: 0;
+    visibility: hidden;
+}
+
+.team-overlay:hover .overlay {
+    visibility: visible;
+    opacity: 1;
+}
+
+.team-overlay:hover .team-image {
+    transform: translate(-10px, -10px);
 }
 
 .team-overlay {
     position: relative;
+    margin: 0 0 30px;
+}
+
+.social-buttons {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.button {
+    width: 56px;
+    height: 56px;
+    border: none;
+    display: block;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgb(252, 227, 138);
+    cursor: pointer;
+}
+
+.social-buttons li:not(:last-child) {
+    border-right: 1px solid rgba(243, 129, 129, 0.5);
+}
+
+
+.button-facebook {
+    background-image: url(../images/facebook-icon.png)
+}
+
+.button-twitter {
+    background-image: url(../images/twitter-icon.png)
+}
+
+.button-pinterest {
+    background-image: url(../images/pinterest-icon.png)
+}
+
+.button-insta {
+    background-image: url(../images/instagram-icon.png)
+}
+
+/* .team-description {
+    margin: 0;
+    padding: 0;
+} */
+
+.team-name {
+    font-family: var(--second-font);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    color: var(--main-font-color);
+    text-transform: uppercase;
+    margin: 0 0 14px;
+    padding: 0;
+}
+
+.team-position {
+    font-family: var(--main-font);
+    font-size: 15px;
+    font-weight: 300;
+    font-style: italic;
+    line-height: 24px;
+    color: var(--second-font-color);
+    margin: 0;
+    padding: 0;
+}
+
+footer {
+    border-top: 1px solid rgb(229, 229, 229);
+    padding-bottom: 12px;
+}
+
+div.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+
+
+.footer-content p {
+    font-family: var(--second-font);
+    font-size: 14px;
+    line-height: 16px;
+    color: var(--font-color);
+    margin: 0;
+    padding: 0;
+}
+
+.footer-content a {
+    color: rgb(243, 129, 129);
+}
+
+.contact-form {
+    display: flex;
+}
+
+.contact-form__input {
+    height: 40px;
+    width: 228px;
+    padding-left: 10px;
+    border: 1px solid rgb(231, 231, 231);
+}
+
+.contact-form__btn {
+    border: none;
+    background-color: rgb(149, 225, 211);
+    color: rgb(255, 255, 255);
+    width: 150px;
+    height: 40px;
+}
+
+.contact-form__input::placeholder {
+    text-transform: uppercase;
+    font-family: var(--main-font);
+    font-size: 15px;
+    line-height: 24px;
+    font-style: italic;
+    color: var(--second-font-color);
 }
